--- a/proj/src/index.html
+++ b/proj/src/index.html
@@ -4,7 +4,11 @@
   <meta charset="utf-8">
   <title>Proj</title>
   <base href="/">
-
+  <style>
+  body {
+    margin: 0;
+  }
+  </style>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
